--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -77,7 +77,8 @@ const bannerOffset =
 	  data-overlayscrollbars-initialize
 >
 	<head>
-
+		<meta name="baidu-site-verification" content="codeva-8bS8wgyQLS" />
+		
 		<title>{pageTitle}</title>
 
 		<meta charset="UTF-8" />
