Remove Baidu Verify file

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -150,6 +150,7 @@ const bannerOffset =
 	<body class=" min-h-screen transition " class:list={[{"lg:is-home": isHomePage, "enable-banner": enableBanner}]}
 		  data-overlayscrollbars-initialize
 	>
+		<h1>OCAiil's Blog</h1>
 		<ConfigCarrier></ConfigCarrier>
 		<slot />
 
